delete ubicacion fav
